parser/lox.grammar
// GRAMMAR IN EBNF format
expression -> comma "EOF"
comma -> equality ("," equality)*
equality -> comparison ( ( "!=" or "==" ) comparison )*
comparison -> term ( ( ">" or ">=" or "<" or "<=" ) term )*
term -> factor ( ( "-" or "+" ) factor )*
factor -> unary ( ( "/" or "*" ) unary )*
unary -> ( "!" or "-" ) unary or primary 
primary -> "IDENTIFIER" or "NUMBER" or "STRING" or "true" or "false" or "nil" or "(" expression ")"
